name:                binary-parsing
version:             0.1.0.0
synopsis:            Portable Graymap Parser
description:         See, it's kinda complicated
homepage:            https://github.com/evturn/binary-parsing
license:             BSD3
license-file:        LICENSE
author:              Evan Turner
maintainer:          ev@evturn.com
copyright:           1902
category:            Text
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Parse
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.10 && <4.11, bytestring >=0.10 && <0.11
  -- hs-source-dirs:      src
  default-language:    Haskell2010
